[package]
name = "rogu"
version = "0.1.0"
edition = "2024"

[dependencies]
# Default OpenGL backend doesn't currently work with Wayland due to use of old
# depencendies gluten and winit. Must set env var to force x11 mode:
# `WINIT_UNIX_BACKEND=x11 cargo run`
bracket-lib = { version = "~0.8" }
# legion = { version = "=0.3.1" } # book version
legion = { version = "0.4.0" }
ron = { version = "0.11.0" }
serde = { version = "1.0.228" }

# Crossterm backend doesn't currently work unless specify *exact* terminal dimensions
#bracket-lib = { version = "~0.8", default-features = false, features = ["crossterm"]}
#bracket-lib = { path = "../bracket-lib", default-features = false, features = ["crossterm"]}

[profile.release]
lto = "thin"
